Adding Required Features

--- a/css/master.css
+++ b/css/master.css
@@ -36,6 +36,7 @@ ul {
   text-align: center;
 }
 
+
 .info-view-image {
   float: left;
   margin-right: 15px;
@@ -70,7 +71,8 @@ ul {
 
 .info-view-body {
     max-height:300px;
-    overflow-y:auto;
+    min-height: 250px;
+    overflow: auto;
 }
 
 
@@ -87,6 +89,7 @@ ul {
   }
   .info-view-body {
       max-height:50vh;
+      min-height: 30vh;
       overflow-y:auto;
       width: 100%;
   }
