--- a/css/master.css
+++ b/css/master.css
@@ -8,11 +8,13 @@ body {
   background-color: #000000;
 }
 
+
 ul {
   list-style: none;
   padding-left: 0;
   margin-left: 0;
 }
+
 
 .loading-screen {
   width: 100%;
@@ -20,12 +22,14 @@ ul {
   padding-top: 35vh;
 }
 
+
 .map {
   height: 100vh;
   width: calc(100vw - 280px);
   float: right;
   background-color: #e5e3df;
 }
+
 
 .menu {
   float: left;
@@ -48,14 +52,20 @@ ul {
 }
 
 .filter-list {
-  cursor: pointer;
   line-height: 40px;
   font-size: 18px;
 }
 
+
+.list-item {
+  cursor: pointer;
+}
+
+
 .marker-list-item:hover {
   color: #6ddade;
 }
+
 
 .search-input {
   border-radius: 5px;
@@ -65,9 +75,11 @@ ul {
   text-align: center;
 }
 
+
 .menu-toggle {
   display: none;
 }
+
 
 .info-view-body {
     max-height:300px;
@@ -87,16 +99,24 @@ ul {
     z-index: 1000;
     display: inline;
   }
+
+
   .info-view-body {
       max-height:50vh;
       min-height: 30vh;
       overflow-y:auto;
       width: 100%;
   }
+
+
   .menu {
     display: none;
   }
+
+
   .map {
     width: 100%;
   }
+
+
 }
